--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "glob": "^7.1.4",
     "make-tap-output": "^2.0.0",
     "p-limit": "^2.2.0",
+    "which": "^2.0.2",
     "yargs": "^13.2.4"
   },
   "devDependencies": {
