--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "imhotap",
   "version": "1.0.0",
-  "description": "simple test runner",
+  "description": "A runner of test files. A test framework without a framework.",
   "bin": "imhotap",
   "scripts": {
     "test": "test/test | tap-colorize"
